Changed webpages to load using relative path instead of absolute path.